implement caching - simple cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # logging Properties for Swagger/OpenAPI
 logging.level.org.springdoc=DEBUG
 logging.level.org.springdoc.api=DEBUG
+
+# Cache
+spring.cache.type=simple
