implement redis caching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,9 @@ logging.level.org.springdoc=DEBUG
 logging.level.org.springdoc.api=DEBUG
 
 # Cache
-spring.cache.type=simple
+#spring.cache.type=simple
+
+# Enable Redis caching
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
