--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # logging Properties for Swagger/OpenAPI
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.transaction=TRACE
 logging.level.org.springdoc=DEBUG
 logging.level.org.springdoc.api=DEBUG
 
