--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,15 +15,19 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # enable DEBUG logs globally or per package
-#logging.level.root=DEBUG
+logging.level.root=DEBUG
 
-# logging Properties for hibernate
+# logging Properties
+#for this app
+#logging.file.name=logs/skill-mentor.log
+#logging.level.com.skillmentor.root.service.impl=DEBUG
+#for hibernate
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.transaction=TRACE
-
-# logging Properties for Swagger/OpenAPI
+#for Swagger/OpenAPI
 logging.level.org.springdoc=DEBUG
 logging.level.org.springdoc.api=DEBUG
+
 
 # Cache
 #spring.cache.type=simple
