--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,37 +2,6 @@ spring.application.name=root
 server.port=8080
 server.servlet.context-path=/root/api/v1
 
-# Database Connection Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/skill_mentor?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=MYsql@123@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate Properties
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# enable DEBUG logs globally or per package
-logging.level.root=DEBUG
-
-# logging Properties
-#for this app
-#logging.file.name=logs/skill-mentor.log
-#logging.level.com.skillmentor.root.service.impl=DEBUG
-#for hibernate
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.transaction=TRACE
-#for Swagger/OpenAPI
-logging.level.org.springdoc=DEBUG
-logging.level.org.springdoc.api=DEBUG
-
-
-# Cache
-#spring.cache.type=simple
-
-# Enable Redis caching
-spring.cache.type=redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+# Profile
+spring.profiles.active=prod
