--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -25,3 +25,14 @@ spring.data.redis.port=6379
 #logging.level.org.hibernate.transaction=TRACE
 #logging.level.org.springdoc=DEBUG
 #logging.level.org.springdoc.api=DEBUG
+
+# Actuator
+# Enable specific actuator endpoints (or use * for all)
+management.endpoints.web.exposure.include=*
+# Show full health details
+management.endpoint.health.show-details=always
+# (Optional) Application info
+info.app.name=My Spring Boot App
+info.app.version=1.0.0
+# limit access to actuator endpoints
+#management.endpoints.web.exposure.include=health,info
