--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,16 +2,16 @@ spring.application.name=root
 server.servlet.context-path=/root/api/v1
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/skill_mentor_dev?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=MYsql@123@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://${SUPABASE_DB_HOST}:${SUPABASE_DB_PORT}/${SUPABASE_DB_NAME}
+spring.datasource.username=${SUPABASE_DB_USER}
+spring.datasource.password=${SUPABASE_DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Caching
 spring.cache.type=redis
