--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,9 +2,9 @@ spring.application.name=root
 server.servlet.context-path=/root/api/v1
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/skill_mentor_prod?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=MYsql@123@
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate
