--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
 spring.application.name=root
 server.servlet.context-path=/root/api/v1
+server.port=8080
 
 # Database
 spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
@@ -14,13 +15,13 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Caching
-spring.cache.type=redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+#spring.cache.type=redis
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
 
 # Logs
-#logging.file.name=logs/skill-mentor.log
-#logging.level.com.skillmentor.root.service.impl=DEBUG
+logging.file.name=logs/skill-mentor.log
+logging.level.com.skillmentor.root.service.impl=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.transaction=TRACE
 #logging.level.org.springdoc=DEBUG
