--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=root
 server.port=8080
-server.servlet.context-path=/root/api/v1
+server.servlet.context-path=/api/v1
 
 
 # Profile
-spring.profiles.active=dev
+spring.profiles.active=prod
