--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 spring.application.name=root
-server.servlet.context-path=/root/api/v1
+server.servlet.context-path=/api/v1
 server.port=8080
 
 # Database
