--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.application.name=root
+spring.application.name=peertutoringplatform
 server.servlet.context-path=/api/v1
 server.port=8080
 
@@ -33,7 +33,7 @@ management.endpoints.web.exposure.include=*
 # Show full health details
 management.endpoint.health.show-details=always
 # (Optional) Application info
-info.app.name=My Spring Boot App
+info.app.name=Peer Tutoring Platform
 info.app.version=1.0.0
 # limit access to actuator endpoints
 #management.endpoints.web.exposure.include=health,info
