save image file to s3 buckets

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -32,12 +32,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.data.redis.port=6379
 
 # Logs
-logging.file.name=logs/skill-mentor.log
-logging.level.com.skillmentor.root.service.impl=DEBUG
+#logging.file.name=logs/skill-mentor.log
+#logging.level.com.skillmentor.root.service.impl=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.transaction=TRACE
 #logging.level.org.springdoc=DEBUG
 #logging.level.org.springdoc.api=DEBUG
+
 
 # Actuator
 # Enable specific actuator endpoints (or use * for all)
@@ -49,3 +50,19 @@ info.app.name=Peer Tutoring Platform
 info.app.version=1.0.0
 # limit access to actuator endpoints
 #management.endpoints.web.exposure.include=health,info
+
+#spring.jpa.show-sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# HikariCP Configuration
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=570000
+spring.datasource.hikari.minimum-idle=2
+
+aws.s3.access.key=${AWS_S3_ACCESS_KEY}
+aws.s3.secret.key=${AWS_S3_SECRET_KEY}
+
+#aws.java.v1.disableDeprecationAnnouncement=true
+#AWS_JAVA_V1_DISABLE_DEPRECATION_ANNOUNCEMENT
