--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <version>2.16.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.787</version>
+        </dependency>
+
     </dependencies>
 
 
