--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,3 @@
-spring.application.name=peertutoringplatform
-server.servlet.context-path=/api/v1
-server.port=8080
-
 # Database
 spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 spring.datasource.username=${DATABASE_USER}
@@ -10,31 +6,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate
 #spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Caching
-spring.cache.type=redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
 
-# Logs
-#logging.file.name=logs/skill-mentor.log
-#logging.level.com.skillmentor.root.service.impl=DEBUG
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.transaction=TRACE
-#logging.level.org.springdoc=DEBUG
-#logging.level.org.springdoc.api=DEBUG
 
-# Actuator
-# Enable specific actuator endpoints (or use * for all)
-management.endpoints.web.exposure.include=*
-# Show full health details
-management.endpoint.health.show-details=always
-# (Optional) Application info
-info.app.name=Peer Tutoring Platform
-info.app.version=1.0.0
-# limit access to actuator endpoints
-#management.endpoints.web.exposure.include=health,info
+
 
