--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,68 +1,18 @@
-spring.application.name=peertutoringplatform
-server.servlet.context-path=/api/v1
-server.port=8080
-
 # Database
-
-## Local db properties (MySQL)
-#spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
-#spring.datasource.username=${DATABASE_USER}
-#spring.datasource.password=${DATABASE_PASSWORD}
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-## Original properties
 spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-
 # Hibernate
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Caching
-#spring.cache.type=redis
-#spring.data.redis.host=localhost
-#spring.data.redis.port=6379
-
-# Logs
-#logging.file.name=logs/skill-mentor.log
-#logging.level.com.skillmentor.root.service.impl=DEBUG
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.transaction=TRACE
-#logging.level.org.springdoc=DEBUG
-#logging.level.org.springdoc.api=DEBUG
-
-
-# Actuator
-# Enable specific actuator endpoints (or use * for all)
-management.endpoints.web.exposure.include=*
-# Show full health details
-management.endpoint.health.show-details=always
-# (Optional) Application info
-info.app.name=Peer Tutoring Platform
-info.app.version=1.0.0
-# limit access to actuator endpoints
-#management.endpoints.web.exposure.include=health,info
-
-#spring.jpa.show-sql=true
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # HikariCP Configuration
 spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=570000
 spring.datasource.hikari.minimum-idle=2
 
-aws.s3.access.key=${AWS_S3_ACCESS_KEY}
-aws.s3.secret.key=${AWS_S3_SECRET_KEY}
+aws.s3.access-key=${AWS_S3_ACCESS_KEY}
+aws.s3.secret-key=${AWS_S3_SECRET_KEY}
 
-#aws.java.v1.disableDeprecationAnnouncement=true
-#AWS_JAVA_V1_DISABLE_DEPRECATION_ANNOUNCEMENT
