--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=peertutoringplatform
-server.port=8080
 server.servlet.context-path=/api/v1
+server.port=8080
 
+# Actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+info.app.name=Peer Tutoring Platform
+info.app.version=1.0.0
 
 # Profile
 spring.profiles.active=prod
